examples/test/testpolicy17091.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17091
  namespace: namespace164
spec:
  podSelector:
    matchLabels:
      key16: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value38
      podSelector:
        matchLabels:
          key20: value44
          key16: value49
